--- a/5.html
+++ b/5.html
@@ -7,7 +7,8 @@
 
 <body>
     <script type="text/javascript">
-        alert("test");
+        a = 3;
+        alert(a);
     </script>
     <p>test</p>
 </body>
