--- a/5.html
+++ b/5.html
@@ -9,6 +9,10 @@
     <script type="text/javascript">
         a = 3;
         alert(a);
+        a = 4;
+        alert(a);
+        a = "にゃー";
+        alert(a);
     </script>
     <p>test</p>
 </body>
