--- a/5.html
+++ b/5.html
@@ -7,12 +7,11 @@
 
 <body>
     <script type="text/javascript">
-        a = 3;
+        a=3+4;
         alert(a);
-        a = 4;
+        a=a*2;
         alert(a);
-        a = "にゃー";
-        alert(a);
+        alert(a/7);
     </script>
     <p>test</p>
 </body>
