--- a/5.html
+++ b/5.html
@@ -7,11 +7,10 @@
 
 <body>
     <script type="text/javascript">
-        a=3+4;
-        alert(a);
-        a=a*2;
-        alert(a);
-        alert(a/7);
+        a = 5;
+        if (a == 3) {
+            alert("test");
+        }
     </script>
     <p>test</p>
 </body>
