--- a/5.html
+++ b/5.html
@@ -7,9 +7,11 @@
 
 <body>
     <script type="text/javascript">
-        a = 5;
-        if (a == 3) {
-            alert("test");
+        a = 20;
+        if (a >= 10) {
+            alert(a + "は１０以上です");
+        } else {
+            alert(a + "は１０より小さいです");
         }
     </script>
     <p>test</p>
