--- a/6.html
+++ b/6.html
@@ -1,12 +1,12 @@
-<html>
+<html lang="ja">
 
 <head>
     <meta charset="UTF-8">
-    <title>ここにページのタイトルが入ります。</title>
+    <title>webの勉強を開始</title>
 </head>
 
 <body>
-    ここにページの内容が入ります。
+    <p>伝説のwebクリエーターに、俺はなる！</p>
 </body>
 
 </html>
