--- a/11.html
+++ b/11.html
@@ -5,7 +5,8 @@
     </head>
     <body>
         <script type="text/javascript">
-         alert("test");
+        a = 3;
+         alert(a);
         </script>
         <p>test</p>
     </body>
