--- a/5.html
+++ b/5.html
@@ -4,6 +4,7 @@
     <title>test</title>
 </head>
 <body>
+    
     <script type="text/javascript">
         a = 20;
         if (a >= 10) {
@@ -13,5 +14,5 @@
         }
     </script>
     <p>test</p>
-</body>
+</body
 </html>
